--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>
-      <h1>Hi, I'm Trần Minh Phúc</h1>
-      <p>Full Stack Developer passionate about NestJS, React, Prisma, Docker, and more!</p>
-    </header>
+<header>
+  <img src="https://scontent.fsgn2-6.fna.fbcdn.net/v/t39.30808-6/480503451_2711517615699401_1662786909551871870_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeG_LKpoxOtGLdn8q59AiCLO3456KqFN_IffjnoqoU38h6-1xL8-NC3hFcx3s5u-QEj1yCicO_9lBIMMnzJE1Flw&_nc_ohc=HYECngjEybwQ7kNvwFEcP_Y&_nc_oc=AdmfNxLVFvAAqBqpTGvORFN4kedIzZxjmlBTQpRRTpRi0WPkL6-7W44RQj3seYV0oWE&_nc_zt=23&_nc_ht=scontent.fsgn2-6.fna&_nc_gid=GIwveZNk-sK0biRiUyjwsw&oh=00_AfGNNZk_nEkhMAtfSI1xr0eqFyYR8hRyw_zxF5LgTQeL_A&oe=6806FB6C" alt="Banner Image" style="width: 100%; height: auto;">
+  <h1>Hi, I'm Trần Minh Phúc</h1>
+  <p>Full Stack Developer passionate about NestJS, React, Prisma, Docker, and more!</p>
+</header>
+
     <section>
       <h2>Projects</h2>
       <ul>
@@ -17,5 +19,15 @@
         <li><a href="https://github.com/trminhphuc1504/reactStateGlasses">React State Glasses</a></li>
       </ul>
     </section>
+    <section>
+  <h2>Skills & Technologies</h2>
+  <ul>
+    <li>🏗️ NestJS</li>
+    <li>⚡ Prisma</li>
+    <li>⚙️ Docker</li>
+    <li>📱 React</li>
+  </ul>
+</section>
+
   </body>
 </html>
